Introduce new BuildItem to automatically enable Java modules for native-image